--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,8 +42,11 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'io.paperdb:paperdb:2.6'
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
+    implementation'com.cepheuen.elegant-number-button:lib:1.0.2'
+
 
 
 }
 
 apply plugin: 'com.google.gms.google-services'  // Google Play services Gradle plugin
+
