--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,29 +8,35 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme.NoActionBar">
+        android:theme="@style/AppTheme.NoActionBar"
+        xmlns:tools="http://schemas.android.com/tools"
+        tools:replace="android:theme"
+        >
+        <activity android:name=".ProductDetailsActivity"></activity>
         <activity
-            android:name="com.example.macro.CategoryActivity"
+            android:name=".CategoryActivity"
             android:label="@string/title_activity_category"
-            android:theme="@style/AppTheme.NoActionBar.NoActionBar"></activity>
-        <activity android:name="com.example.macro.OrderActivity" />
-        <activity android:name="com.example.macro.CartActivity" />
-        <activity android:name="com.example.macro.SettingsActivity" />
+            android:theme="@style/AppTheme.NoActionBar.NoActionBar" />
+        <activity android:name=".OrderActivity" />
+        <activity android:name=".CartActivity" />
+        <activity android:name=".SettingsActivity" />
         <activity
-            android:name="com.example.macro.HomeActivity"
+            android:name=".HomeActivity"
             android:label="@string/title_activity_home"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name="com.example.macro.RegisterActivity" />
-        <activity android:name="com.example.macro.LoginActivity" />
-        <activity android:name="com.example.macro.MainActivity">
+        <activity android:name=".RegisterActivity" />
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
-            android:theme="@style/Base.Theme.AppCompat"/>
+        <activity
+            android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
+            android:theme="@style/Base.Theme.AppCompat" />
+
 
     </application>
 
