--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.macro">
 
-    <application
+    <application xmlns:tools="http://schemas.android.com/tools"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar"
-        xmlns:tools="http://schemas.android.com/tools"
-        tools:replace="android:theme"
-        >
-        <activity android:name=".ProductDetailsActivity"></activity>
+        tools:replace="android:theme">
+        <activity android:name=".SearchActivity"></activity>
+        <activity android:name=".ProductDetailsActivity" />
         <activity
             android:name=".CategoryActivity"
             android:label="@string/title_activity_category"
@@ -36,8 +36,6 @@
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat" />
-
-
     </application>
 
 </manifest>
