--- a/MACRO2/app/src/main/AndroidManifest.xml
+++ b/MACRO2/app/src/main/AndroidManifest.xml
@@ -3,8 +3,8 @@
     package="com.example.macro">
     <!-- Internet Permission -->
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -20,11 +20,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ProfileActivity"/>
+        <activity android:name=".ProfileActivity" />
         <activity android:name=".CreateActivity" />
         <activity android:name=".EmployeeActivity" />
-        <activity android:name=".DashboardActivity"/>
-
+        <activity android:name=".DashboardActivity" />
+        <activity android:name=".UsersActivity"/>
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
